--- a/angular.json
+++ b/angular.json
@@ -21,15 +21,20 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
+              "src/assets",
+              {                
                 "glob": "**/*",
-                "input": "public"
+                "input": "public"                
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/aos/dist/aos.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js", "node_modules/aos/dist/aos.js"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
